# AI_Boost

./: .gitignore  AiLib.sln
AiLib/: AIBoost.cpp  AIBoost.i  AiLib.cpp  AiLib.vcxproj  AiLib.vcxproj.filters  CMakeLists.txt  DataSet.cpp  DataSet.h  DataSet.hpp  Enums.cpp  Enums.h  Enums.hpp  Layer.cpp  Layer.h  Layer.hpp  Model.cpp  Model.h  Model.hpp  setup.py  test.py  testGate.py  testRun.ipynb
AiLib/AIBoost.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
